--- a/main/css/style.css
+++ b/main/css/style.css
@@ -32047,7 +32047,7 @@ img.away, img.busy, img.offline, img.online {
 }
 
 select#ip-dateRangeDropdown-s1, select#ip-dateRangeDropdown-s2, select#ip-dateRangeDropdown-s3, select#ip-dateRangeDropdown-s4,
-select#ip-dateRangeDropdown-s5 {
+select#ip-dateRangeDropdown-s5, select#ip-dateRangeDropdown-s6 {
   position: relative;
   right: 2%;
   top: 8px;
@@ -32057,7 +32057,7 @@ select#ip-dateRangeDropdown-s5 {
 }
 
 select#ip-centerDropdown-s1, select#ip-centerDropdown-s2, select#ip-centerDropdown-s3, select#ip-centerDropdown-s4,
-select#ip-centerDropdown-s5 {
+select#ip-centerDropdown-s5, select#ip-centerDropdown-s6 {
   position: relative;
   right: 19%;
   top: -16px;
@@ -32067,7 +32067,7 @@ select#ip-centerDropdown-s5 {
 }
 
 select#ip-villageDropdown-s1, select#ip-villageDropdown-s2, select#ip-villageDropdown-s3, select#ip-villageDropdown-s4,
-select#ip-villageDropdown-s5 {
+select#ip-villageDropdown-s5, select#ip-villageDropdown-s6 {
   position: relative;
   right: 40%;
   top: -40px;
@@ -32077,7 +32077,7 @@ select#ip-villageDropdown-s5 {
 }
 
 select#op-dateRangeDropdown-s1, select#op-dateRangeDropdown-s2, select#op-dateRangeDropdown-s3, select#op-dateRangeDropdown-s4,
-select#op-dateRangeDropdown-s5 {
+select#op-dateRangeDropdown-s5, select#op-dateRangeDropdown-s6 {
   position: relative;
   right: 2%;
   top: 8px;
@@ -32087,7 +32087,7 @@ select#op-dateRangeDropdown-s5 {
 }
 
 select#op-centerDropdown-s1, select#op-centerDropdown-s2, select#op-centerDropdown-s3, select#op-centerDropdown-s4,
-select#op-centerDropdown-s5 {
+select#op-centerDropdown-s5, select#op-centerDropdown-s6 {
   position: relative;
   right: 19%;
   top: -16px;
@@ -32097,7 +32097,7 @@ select#op-centerDropdown-s5 {
 }
 
 select#op-villageDropdown-s1, select#op-villageDropdown-s2, select#op-villageDropdown-s3, select#op-villageDropdown-s4,
-select#op-villageDropdown-s5 {
+select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
   position: relative;
   right: 40%;
   top: -40px;
