--- a/main/css/style.css
+++ b/main/css/style.css
@@ -24189,26 +24189,23 @@ table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTa
   overflow-x: auto;
   max-width: 100%;
   margin-bottom: 4.5rem;
-  /*padding-bottom: 0.5rem;*/
 }
 .paging_simple_numbers {
   position: absolute;
-  left: 3%;
-  bottom: 1%;
+  bottom: 0;
+  right: 570px;
 }
 
 .dataTables_info {
   position: absolute;
-  bottom: 2%;
+  bottom: 1%;
 }
 
-/*.bottom {*/
-/*  position: absolute;*/
-/*  bottom: 0;*/
-/*  margin-top: 1.5rem;*/
-/*  margin-bottom: 1rem;*/
-/*  !*padding-top: 0.5rem;*!*/
-/*}*/
+.bottom {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1rem;
+}
 
 .top {
   margin-bottom: 3.5rem;
