--- a/main/css/style.css
+++ b/main/css/style.css
@@ -43615,8 +43615,8 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
 
 #openPopupBtn {
     position: relative;
-    right: 84%;
-    top: 35px;
+    /*right: 84%;*/
+    /*top: 35px;*/
     border-radius: 11px;
     color: white;
     font-size: initial;
@@ -43636,4 +43636,65 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
     width: 100%;
     border: 0;
     padding: 6px;
+}
+
+#openOperationPopupBtn {
+    position: relative;
+    right: 88%;
+    bottom: 24px;
+    border-radius: 11px;
+    color: white;
+    font-size: initial;
+    background: #003f5c;
+    width: 55px;
+    border: 0;
+    padding: 2px;
+}
+
+.operations-label {
+    margin-inline-start: 10%;
+    margin-block: 2%;
+}
+
+.operations-value {
+    margin-inline-end: 10%;
+    margin-block: 2%;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    backdrop-filter: blur(5px); /* Adjust the blur effect as needed */
+    display: none;
+}
+
+#popupContainerOperations {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.popup-content-operations{
+    padding: 20px;
+    width: 25vw;
+}
+
+#s1-ip-chart, #s1-op-chart, #s2-ip-chart, #s2-op-chart, #s3-ip-chart, #s3-op-chart,
+#s4-ip-chart, #s4-op-chart, #s5-ip-chart, #s5-op-chart, #s6-ip-chart, #s6-op-chart {
+    direction: ltr;
+}
+
+.c3-chart-arc text {
+    font-size: 20px; /* Adjust the font size to your preference */
 }
