--- a/main/css/style.css
+++ b/main/css/style.css
@@ -43613,7 +43613,7 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
     z-index: 1000;
 }
 
-#openPopupBtn {
+#openCentersTargetsPopupBtn {
     position: relative;
     /*right: 84%;*/
     /*top: 35px;*/
@@ -43624,6 +43624,7 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
     width: 145px;
     border: 0;
     padding: 6px;
+    display: none;
 }
 
 #formButton {
@@ -43649,6 +43650,7 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
     width: 55px;
     border: 0;
     padding: 2px;
+    display: none;
 }
 
 .operations-label {
@@ -43701,4 +43703,22 @@ select#op-villageDropdown-s5, select#op-villageDropdown-s6 {
 
 .treeview-menu {
     display: block;
+}
+
+.loader {
+    border-top: 16px solid blue;
+    border-bottom: 16px solid blue;
+    /*border-radius: 50%;*/
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.spinner-border {
+    display: none;
 }
